name:                your-project
version:             0.1.0.0
synopsis:            Making haskell library demo
description:         Making haskell library demo  
homepage:            https://github.com/Azabuhs/your-project
license:             MIT
license-file:        LICENSE
author:              gogotanaka
maintainer:          mail@tanakakazuki.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.10
-- copyright:           
-- extra-source-files:  
-- patches.

source-repository head
  type: git
  location: https://github.com/egison/egison.git

library
  hs-source-dirs:      src
  exposed-modules:     YourProject
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  -- other-modules:       
  -- other-extensions:    
  
